[gd_scene load_steps=10 format=3 uid="uid://bua1ukx5rlnxe"]

[ext_resource type="Script" path="res://menus/SettingsMenu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cfd8j7qi86jal" path="res://fonts/hack/Hack-Regular.ttf" id="2"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Settings" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.194349, 0.194349, 0.194349, 1)
script = ExtResource("1")

[node name="Label_Title" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 150.0
theme_override_fonts/font = SubResource("1")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 140.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label_Mouse_Sensitivity" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Mouse Sensitivity"

[node name="HSlider_Mouse_Sensitivity" type="HSlider" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../HSlider_Joypad_Sensitivity")
focus_next = NodePath("../HSlider_Joypad_Sensitivity")
focus_previous = NodePath("../../../../Button_Back")
tick_count = 10

[node name="Label_Joypad_Sensitivity" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Joypad Sensitivity"

[node name="HSlider_Joypad_Sensitivity" type="HSlider" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HSlider_Mouse_Sensitivity")
focus_neighbor_bottom = NodePath("../HSlider_Field_of_View")
focus_next = NodePath("../HSlider_Field_of_View")
focus_previous = NodePath("../HSlider_Mouse_Sensitivity")

[node name="Label_Field_of_View" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Field of View"

[node name="HSlider_Field_of_View" type="HSlider" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HSlider_Joypad_Sensitivity")
focus_neighbor_bottom = NodePath("../CheckButton_VSync")
focus_next = NodePath("../CheckButton_VSync")
focus_previous = NodePath("../HSlider_Joypad_Sensitivity")
min_value = 50.0
max_value = 150.0
step = 10.0
value = 100.0
tick_count = 3

[node name="CheckButton_VSync" type="CheckButton" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HSlider_Field_of_View")
focus_neighbor_bottom = NodePath("../CheckButton_Fullscreen")
focus_next = NodePath("../CheckButton_Fullscreen")
focus_previous = NodePath("../HSlider_Field_of_View")
theme_override_fonts/font = SubResource("4")
text = "V-Sync"

[node name="CheckButton_Fullscreen" type="CheckButton" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CheckButton_VSync")
focus_neighbor_bottom = NodePath("../CheckButton_Debug")
focus_next = NodePath("../CheckButton_Debug")
focus_previous = NodePath("../CheckButton_VSync")
theme_override_fonts/font = SubResource("5")
text = "Fullscreen"

[node name="CheckButton_GunOnLeft" type="CheckButton" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("5")
text = "Gun On Left"

[node name="CheckButton_Debug" type="CheckButton" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CheckButton_Fullscreen")
focus_previous = NodePath("../CheckButton_Fullscreen")
theme_override_fonts/font = SubResource("6")
text = "Debug Mode"

[node name="Button_Back" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
focus_neighbor_bottom = NodePath("../ScrollContainer/HBoxContainer/VBoxContainer/HSlider_Mouse_Sensitivity")
focus_next = NodePath("../ScrollContainer/HBoxContainer/VBoxContainer/HSlider_Mouse_Sensitivity")
theme_override_fonts/font = SubResource("8")
text = "< Back"
